# ichatbio-sdk

./: README.md  pyproject.toml
.github/workflows/: python-package.yml  tests.yml
a2a/v1/: README.md
examples/cataas/: __main__.py  agent.py
examples/friendly/: __main__.py  agent.py
examples/hello_world/: __main__.py  agent.py
examples/idigbio/: agent.py  ai.py
examples/idigbio/entrypoints/: find_occurrence_records.py
examples/langchain_weather/: README.md  agent.py  util.py
examples/vision/: agent.py
src/ichatbio/: agent.py  agent_executor.py  agent_response.py  pytest_plugin.py  server.py  test_utils.py  types.py
tests/: conftest.py  test_agent_executor.py  test_agent_response.py  test_example_agent_server.py  test_example_agents.py  test_examples.py  test_server.py  test_types.py
