[project]
name = "ichatbio-sdk"
version = "0.2.4"
readme = "README.md"
authors = [
    { name = "Michael Elliott", email = "mielliott@ufl.edu" },
    { name = "Manny Luciano", email = "mlluciano@ufl.edu" }
]
description = "A framework which allows AI agents to interact with iChatBio using the A2A protocol."
license = { file = "LICENSE" }
keywords = ["iChatBio", "biodiversity", "research", "science", "AI"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "a2a-sdk==0.3.24",
    "a2a-sdk[http-server]~=0.3.24",
    "pydantic~=2.12.5",
    "typing_extensions~=4.15.0",
    "starlette~=0.52.1",
    "uvicorn~=0.41.0",
    "attrs~=25.4.0"
]

[project.optional-dependencies]
test = [
    "pytest~=8.4.2",
    "pytest-asyncio~=1.2.0"
]
example = [
    "openai~=1.109.1",
    "instructor~=1.11.3",
    "dotenv~=0.9.9",
    "python-dotenv~=1.1.0",
]

[project.urls]
repository = "https://github.com/acislab/ichatbio-sdk"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests", "examples"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "strict"
log_cli = true
log_cli_level = "INFO"

[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ichatbio"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
]