[project]
name = "ichatbio-sdk"
version = "0.2.7"
readme = "README.md"
authors = [
    { name = "Michael Elliott", email = "mielliott@ufl.edu" },
    { name = "Manny Luciano", email = "mlluciano@ufl.edu" }
]
description = "A framework which allows AI agents to interact with iChatBio using the A2A protocol."
license = { file = "LICENSE" }
keywords = ["iChatBio", "biodiversity", "research", "science", "AI"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "a2a-sdk[http-server]==0.3.24",
    "pydantic>=2.12.5",
    "typing_extensions>=4.15.0",
    "starlette>=0.52.1",
    "uvicorn>=0.41.0",
    "attrs>=25.4.0"
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "openai==2.29.0",
    "instructor==1.14.5",
    "python-dotenv==1.2.2",
    "contextvars==2.4",
    "langchain==1.2.13",
    "langchain_openai==1.1.12"
]

[project.urls]
repository = "https://github.com/acislab/ichatbio-sdk"

[project.entry-points.pytest11]
ichatbio = "ichatbio.pytest_plugin"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests", "examples"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "strict"
log_cli = true
log_cli_level = "INFO"

[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ichatbio"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
]
